Removed kuio dependency.
Removed kuio dependency.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ target_link_libraries(AutoBoot
   SceLibKernel_stub
   SceKernelThreadMgr_stub
   SceAppMgr_stub_weak
-  kuio_stub
+  SceIofilemgr_stub
   k
   gcc
 )
